APPS-4871 added (exam) syntax filtering